// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render empty Url 1`] = `
<div>
  No data available for 
</div>
`;

exports[`Should render full Url 1`] = `
Array [
  <div>
    No data available for 
    https://www.lemonde.fr
  </div>,
  " ",
]
`;

exports[`Tools config Should render Url with limited tools 1`] = `
Array [
  <div>
    No data available for 
  </div>,
  " ",
]
`;
